--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + Vue + TS</title>
+    <script src="/lib/aliyun-upload-sdk/lib/es6-promise.min.js"></script>
+    <script src="/lib/aliyun-upload-sdk/lib/aliyun-oss-sdk-6.17.1.min.js"></script>
+    <script src="/lib/aliyun-upload-sdk/aliyun-upload-sdk-1.5.3.min.js"></script>
   </head>
   <body>
     <div id="app"></div>
